syntax = "proto3";

package proto;

message HeartBeatRequest
{
    
}

message HeartBeatResponse
{
    
}

message NVector3
{
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

enum EntityState
{
    NONE = 0;
    IDLE = 1;
    MOVE = 2;
    JUMP = 3;
}

message NEntity
{
    int32 id = 1;
    NVector3 position = 2;
    NVector3 direction = 3;
}

message NEntitySync
{
    NEntity entity = 1;
    EntityState state = 2;
}

message SpaceEntitySyncRequest
{
    NEntitySync entitySync = 1;
}

message SpaceEntitySyncResponse
{
    NEntitySync entitySync = 1;
}

message GameEnterRequest
{
    int32 characterId = 1;
}

message GameEnterResponse
{
    bool success = 1;
    NEntity entity = 2;
}

message SpaceCharactersEnterResponse
{
    int32 spaceId = 1;
    repeated NEntity entityList = 2;
}

message SpaceCharacterLeaveResponse
{
    int32 entityId = 1;
}


message Request
{
    UserRegisterRequest userRegister = 1;
    UserLoginRequest userLogin = 2;
}

message Response
{
    UserRegisterResponse userRegister = 1;
    UserLoginResponse userLogin = 2;
}



message UserRegisterRequest
{
    string username = 1;
    string password = 2;
}

message UserRegisterResponse
{
    bool success = 1;
    int32 code = 2;
    string message = 3;
}

message UserLoginRequest
{
    string username = 1;
    string password = 2;
}

message UserLoginResponse
{
    bool success = 1;
    int32 code = 2;
    string message = 3;
}